assets/styles.css
/* ... */
.spectrum .unassigned .y-axis .unassigned,
.spectrum .y-axis .assigned {
    display: block;
}

.spectrum .unassigned .y-axis .assigned,
.spectrum .y-axis .unassigned {
    display: none;
}

.spectrum .y-axis::after {
    content: "Intensity";
    position: absolute;
    top: 50%;
    left: -50%;
    text-align: center;
    font-style: italic;
    color: var(--color-halfway);
    transform: rotate(270deg);
}

.spectrum .x-axis {
    position: relative;
    grid-area: x-axis;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.spectrum .x-axis::after {
    content: "M/Z";
    position: absolute;
    top: 50%;
    left: 50%;
    text-align: center;
    font-style: italic;
    color: var(--color-halfway);
}

.spectrum .canvas {
    grid-area: canvas;
    position: relative;
    border-left: 2px solid var(--color-foreground);
    border-bottom: 2px solid var(--color-foreground);
    user-select: none;
    --min-mz: calc(var(--zoom-min) * var(--initial-max-mz));
    --max-mz: calc(var(--zoom-max) * var(--initial-max-mz));
    overflow-x: clip;
    overflow-y: visible;
}

.spectrum .canvas .zoom-out {
    position: absolute;
    top: 0px;
    right: 0px;
    color: var(--color-halfway);
    padding: .2rem;
    border: 2px solid var(--color-halfway);
    background-color: transparent;
    border-radius: .2rem;
    font-size: 0.8em;
}

.spectrum .canvas .zoom-out:hover {
    color: var(--color-primary);
    border-color: var(--color-primary);
}

.spectrum .canvas .zoom-out:active {
    color: var(--color-secondary);
    border-color: var(--color-secondary);
}

.spectrum .peak {
    position: absolute;
    height: calc(var(--intensity) / var(--max-intensity) * 100%);
    top: calc(100% - var(--intensity) / var(--max-intensity) * 100%);
    left: calc((var(--mz) - var(--min-mz)) / (var(--max-mz) - var(--min-mz)) * 100%);
    width: 1px;
    background-color: var(--color);
}

.spectrum .unassigned .peak {
    height: calc(var(--intensity) / var(--max-intensity-unassigned) * 100%);
    top: calc(100% - var(--intensity) / var(--max-intensity-unassigned) * 100%);
}

.spectrum .peak.unassigned {
    display: none;
    z-index: -10;
}

.spectrum .unassigned .peak.unassigned {
    display: block;
}

.spectrum .peak span {
    position: absolute;
    top: -1.6em;
    left: -.5em;
    text-anchor: end;
    z-index: 10;
    cursor: default;
    display: none;
}

.spectrum .label .peak span {
    display: block;
}

.spectrum .peak:hover span {
    color: var(--color-primary);
    z-index: 1000;
    font-weight: 500;
    display: block;
}

.spectrum .peak:hover span.special::after {
    content: var(--content);
    position: absolute;
    display: block;
}

.spectrum .highlight .peak {
    opacity: .1;
}

.spectrum .highlight .peak span {
    opacity: 0;
}

.spectrum .highlight .peak.highlight,
.spectrum .highlight .peak.highlight span {
    opacity: 1;
}

.spectrum .selection {
    border: 2px solid var(--color-primary);
    height: 100%;
    box-sizing: border-box;
    position: absolute;
    pointer-events: none;
}

.spectrum .canvas.dragging * {
    pointer-events: none;
}


/* Special rules for depth of coverage plots */

.doc-plot {
    flex-basis: 100%;
}

.doc-plot .histogram {
    grid-template-rows: 50px 1fr;
    gap: 0;
    grid-template-columns: minmax(0px, max-content) repeat(auto-fit, minmax(0px, 1fr));
}

.doc-plot .histogram .bar span {
    position: absolute;
    color: var(--color-foreground)
}

.doc-plot .histogram .label {
    overflow-x: visible;
}


/* Alignment details index menu */

.alignment-details {
    display: none;
    position: fixed;
    bottom: 0;
    right: 0;
    background: var(--color-background);
    border: 2px solid var(--color-primary);
    border-bottom: none;
    border-right: none;
    padding: 1em;
    padding-top: 0;
}

.alignment-details.active {
    display: block;
}

.alignment-details h4 {
    padding: 1em;
    margin: 0;
}

.alignment-details td {
    border: none;
}

.alignment-details .histogram {
    grid-template-rows: 1ch 1fr;
    grid-template-columns: none;
}

.alignment-details .histogram .label {
    font-size: .7em;
}

.alignment-details .histogram .y-axis,
.alignment-details .histogram .empty {
    display: none;
}

.sequence-match-graphic {
    display: flex;
}

.sequence-match-graphic>* {
    padding: 1px;
    height: 1ch
}

.sequence-match-graphic .match {
    background-color: var(--color-primary);
}

.sequence-match-graphic .gap-in-template {
    background-color: var(--color-secondary);
}

.sequence-match-graphic .gap-in-query {
    background-color: var(--color-foreground);
}

.hidden {
    display: none;
}
/* ... */

